# localsearch-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
data/indexing_states/: state_56b7aa5947bf.json  state_7a4e87c50eb0.json  state_a911815a44d3.json
src/: __main__.py  chunking.py  content_cleaner.py  document_analyzer.py  indexer.py  loaders.py  logger.py  quality_metrics.py  server.py
test_docs/: api_guide.md  document1.md  document2.md  document3.txt  document4.md  technical_specs.txt
test_notes/: meeting_notes.md  secret_project.md
test_notes/subdir/deep/: nested.md
tests/: README.md  test_indexing_search.py  test_path_isolation.py  verify_with_ollama.py
